JJava 1.0-a6 upgrade
also, proper source includes in JJava docs