@@ -11,6 +11,38 @@
 
     <artifactId>jjava1-docs</artifactId>
 
+    <properties>
+        <jjava1.version>1.0-a6</jjava1.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.dflib.jjava</groupId>
+                <artifactId>jjava-kernel</artifactId>
+                <version>${jjava1.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.dflib.jjava</groupId>
+            <artifactId>jjava-kernel</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -34,6 +66,13 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens jdk.jshell/jdk.jshell=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
